Support write-only secret store via setuid gauthctl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,14 +2,25 @@ cmake_minimum_required(VERSION 3.0)
 
 project(google-authenticator-wrappers
 	VERSION 1
-	LANGUAGES)
+	LANGUAGES C)
 
-# pre-set to silence warning, we do not use it anyway
-set(CMAKE_INSTALL_LIBDIR "lib")
 include(GNUInstallDirs)
 
 set(CMAKE_INSTALL_PAMDIR "/etc/pam.d"
 	CACHE PATH "Install path for pam.d files")
+set(CMAKE_INSTALL_GAUTH_STATEDIR "/var/lib/gauth"
+	CACHE PATH "Storage path for gauth user configs")
+GNUInstallDirs_get_absolute_install_dir(
+	CMAKE_INSTALL_FULL_GAUTH_STATEDIR CMAKE_INSTALL_GAUTH_STATEDIR)
+
+configure_file(pam.d/google-auth.in pam.d/google-auth @ONLY)
+add_definitions(
+	-DVERSION=\"${PROJECT_VERSION}\"
+	-DGAUTH_STATEDIR=\"${CMAKE_INSTALL_FULL_GAUTH_STATEDIR}\")
+
+add_executable(gauthctl
+	src/gauthctl.c)
+target_link_libraries(gauthctl pam pam_misc)
 
 install(
 	PROGRAMS
@@ -19,6 +30,25 @@ install(
 	DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 install(
+	TARGETS
+		gauthctl
+	PERMISSIONS
+		OWNER_READ OWNER_WRITE OWNER_EXECUTE
+		GROUP_EXECUTE WORLD_EXECUTE SETUID
+	DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+install(
 	FILES
-		pam.d/google-auth
+		pam.d/gauthctl
+		${CMAKE_BINARY_DIR}/pam.d/google-auth
 	DESTINATION ${CMAKE_INSTALL_PAMDIR})
+
+install(CODE "
+	file(MAKE_DIRECTORY gauth.tmp)
+	file(WRITE gauth.tmp/.keep \"\")
+
+	file(INSTALL gauth.tmp/.
+		DESTINATION \"${CMAKE_INSTALL_GAUTH_STATEDIR}\"
+		DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE)
+
+	file(REMOVE_RECURSE gauth.tmp)")
